tests/errors/lists/001.err
[1m[0;31merror: [0m'items' not found
  [1m[34m-->[0m src/tests/errors/lists/001.ura:5:5
  [1m[34m|[0m
[1m[34m5 |[0m     items list[Widget]
  [1m[34m|[0m     [1;31m^^^^^[0m
